--- a/Umlaufbahnen/Umlaufbahnen.ipynb
+++ b/Umlaufbahnen/Umlaufbahnen.ipynb
@@ -31,7 +31,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simulation der Erd- und Sonnenumlaufbahnen $U_E(t)$ sowie $U_S(t)$"
+    "# Simulation der Erdumlaufbahn $U_E(t)$"
    ]
   },
   {
@@ -57,12 +57,7 @@
     "y0_erde = r_ES\n",
     "x0_erde = 0\n",
     "v_x0_erde=-v_E #negativ um in Richtung gegen den Uhrzeigersinn zu zeigen\n",
-    "v_y0_erde=0\n",
-    "#Startparameter der Sonne\n",
-    "y0_sonne = r_ES*m_erde/(m_erde+m_sonne)\n",
-    "x0_sonne = 0\n",
-    "v_x0_sonne=-np.sqrt(G*(m_erde+m_sonne)*2/y0_sonne) #negativ um in Richtung gegen den Uhrzeigersinn zu zeigen\n",
-    "v_y0_sonne=0"
+    "v_y0_erde=0"
    ]
   },
   {
